# theater_booker

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  README_dependencies.md  conanfile.py  doxygen_documentation_generator.sh
.devcontainer/: Dockerfile
.github/template/: README.md  template_name
.github/workflows/: auto-clang-format.yml  codacy-analysis.yml
include/: theater_booker.hpp
src/: main.cpp  theater_booker.cpp
unit_tests/: CMakeLists.txt
unit_tests/inc/: theater_booker_tests.hpp
unit_tests/src/: theater_booker_tests.cpp
